--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -78,7 +78,7 @@ flutter:
     - family: Lato
       fonts:
         - asset: assets/fonts/Lato-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+        # - asset: a/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
