--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.3.0
 
+  shared_preferences: ^2.0.17
+  animated_splash_screen: ^1.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
