--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   shared_preferences: ^2.0.17
   animated_splash_screen: ^1.3.0
   flutter_svg: ^1.1.6
+  easy_splash_screen: ^1.0.4
+
+  url_launcher: ^6.1.8
 
 dev_dependencies:
   flutter_test:
